force-app/main/default/objects/Exklusiv_im_ImmoFinder__c/Exklusiv_im_ImmoFinder__c.object-meta.xml
<CustomObject>
    <label>Exklusiv im ImmoFinder</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Exklusiv im ImmoFinder-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exklusiv im ImmoFinder</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>