force-app/main/default/objects/Exklusiv_im_ImmoFinder__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exklusiv im ImmoFinder</relationshipLabel>
    <relationshipName>Exklusiv_im_ImmoFinder</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>