force-app/main/default/objects/Exklusiv_im_ImmoFinder__c/fields/Immobilie__c.field-meta.xml
<CustomField>
    <fullName>Immobilie__c</fullName>
    <label>Immobilie</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Exklusiv im ImmoFinder</relationshipLabel>
    <relationshipName>Exklusiv_im_ImmoFinder</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>